--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ db.sqlite3-journal
 media
 mediafiles/
 staticfiles/
+*.idea/*
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
@@ -34,6 +35,7 @@ downloads/
 eggs/
 .eggs/
 lib/
+logs/
 lib64/
 parts/
 sdist/
@@ -44,6 +46,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*__pycache__*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
