implement response_managers and throttling

--- a/achare/.env.sample
+++ b/achare/.env.sample
@@ -9,3 +9,12 @@ DB_HOST
 DB_PASSWORD
 DB_PORT
 DB_USER
+
+# ------------------------------------------------- AUTH ---------------------------------------------------------------
+OTP_TIMEOUT_SECONDS
+
+MAXIMUM_ALLOWED_LOGIN_REQUESTS
+MAXIMUM_ALLOWED_REGISTER_REQUESTS
+
+LOGIN_REQUEST_BLOCK_TIMEOUT_MINUTES
+REGISTER_REQUEST_BLOCK_TIMEOUT_MINUTES
